--- a/Gallery.Web/Web.config
+++ b/Gallery.Web/Web.config
@@ -19,6 +19,14 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="PImgTinyCrop" value="?w=80&amp;h=110&amp;mode=crop"/>
+    <add key="PImgThumbnailCrop" value="?w=125&amp;h=200&amp;mode=crop"/>
+    <add key="PGalleryPreviewCrop" value="?W=200&amp;H=300&amp;Mode=Crop"/>
+    <add key="PImgMediumCrop" value="?w=500&amp;h=800&amp;mode=crop"/>
+    <add key="PImgLargeCrop" value="?w=120&amp;h=180&amp;mode=crop"/>
+    <add key="LImgThumbnailCrop" value="?w=125&amp;h=200&amp;mode=crop"/>
+    <add key="LImgMediumCrop" value="?w=500&amp;h=800&amp;mode=crop"/>
+    <add key="LImgLargeCrop" value="?w=120&amp;h=180&amp;mode=crop"/>
   </appSettings>
   <resizer>
     <!-- Unless you (a) use Integrated mode, or (b) map all reqeusts to ASP.NET, 
